<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/bla">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ship"
        android:scaleType = "centerCrop"
        android:id="@+id/imageView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:id="@+id/button"
        android:onClick="tasks"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:layout_marginTop="104dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection"
        android:onClick="collection"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button4"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:onClick="market"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title"
        android:layout_marginBottom="121dp" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="166dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Money: 500"
        android:id="@+id/mun"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>





