<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal" android:background="@color/bla">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/finalmap"
        android:scaleType = "centerCrop"
        android:id="@+id/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go"
        android:onClick="goF"
        android:layout_gravity="right|top"
        android:id="@+id/button5"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="91dp"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:backgroundTint="@color/red"
        android:layout_gravity="center"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

    <EditText
        android:layout_width="299dp"
        android:layout_height="54dp"
        android:layout_weight="2"
        android:id="@+id/edit_message"
        android:textColor="@color/bla"
        android:textStyle="bold"
        android:hint="@string/edit_message"
        android:layout_gravity="left|top"
        android:layout_alignTop="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:layout_toStartOf="@+id/button5" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="166dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
